@@ -104,6 +104,11 @@ public class AntiEntropyService
                                                          "internal");
     }
 
+    public static enum Status
+    {
+        STARTED, SESSION_SUCCESS, SESSION_FAILED, FINISHED
+    }
+
     /**
      * A map of active session.
      */
@@ -644,6 +649,11 @@ public class AntiEntropyService
         public String getName()
         {
             return sessionName;
+        }
+
+        public Range<Token> getRange()
+        {
+            return range;
         }
 
         RepairFuture getFuture()
